Create recipe website.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Title Here</title>
+    <title>Indian Smoothies</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Indian Smoothie</h1>
+    <p>An <em>Indian smoothie</em> is a bit like a gazpacho. It is a cooked dish blended well and turned into a smoothie or a cold soup. It's an <strong>excellent</strong> way to get lots of nutrients on a daily basis.</p>
+    <p>Here is a list of ingredients for a typical <em>Indian smoothie</em>.</p>
+    <ul>
+      <li>kale
+      <li>tomatoes
+      <li>onion
+      <li>green chilies
+      <li>fresh ginger
+      <li>turmeric
+      <li>black pepper
+      <li>mustard seeds
+      <li>cumin seeds
+      <li>salt
+      <li>Canola oil
+    </ul>
+    <p>Here are the steps to make this amazing smoothie.</p>
+    <ol>
+      <li>Heat 1/4 c oil in a large pan using medium heat.
+      <li>Add 1/2 t cumin seed and 1/2 t mustard seeds. Heat until the mustard seeds pop.
+      <li>Add 1/2 c diced onions. Stir frequently. Cook well.
+      <li>Add 1 T minced ginger and 2 diced green chilies. Stir for several minutes.
+      <li>Add 5 small diced tomatoes. Stir occassionally until tomatoes become a paste.
+      <li>Add 1 c water.
+      <li>Add 3 bunches of chopped kale. Stir occassionally until kale cooks down.
+      <li>Add 1 t turmeric and 1/4 t black pepper.
+      <li>Add 1/2 t salt. Stir occasionally.
+      <li>Remove from heat when kale is cooked to your preference.
+      <li>Fill <a href="http://www.blendtec.com/">Blentec</a> or <a href="https://www.vitamix.com/Home">Vitamix</a> 1/3 full of kale mixture and add water to more than cover the mixture. Blend well. Repeat final step as more smoothies are needed.
+    </ol>
+
+    <p>&copy;2016 Jim Lengel
   </body>
 </html>
+
+
