Added ol and ul with things I love and dislike

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Harry Potter Fan Page</title>
 	</head>
 	<body>
-	<h1>Hello World</h1>
+	<h1><em>Harry Potter Fan Page</em></h1>
+	<h2>Things I Love About Harry Potter</h2>
+		<ol>
+			<li>Characters</li>
+			<li>Plot</li>
+			<li>Magic</li>
+			<li>Childhood Memories</li>
+		</ol>
+	<h2>Things Harry Potter Could Improve</h2>
+		<ul>
+			<li>The main antagonist is fairly two-dimensional</li>
+			<li>A lot of characters die who you love</li>
+		</ul>
+	<p> <strong>JK Rowling</strong> is the Author of the <strong><em>Harry Potter</em></strong> series</p>
+
 	</body>
 </html>
