Added a tag with link to website

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -18,6 +18,7 @@
 			<li>A lot of characters die who you love</li>
 		</ul>
 	<p> <strong>JK Rowling</strong> is the Author of the <strong><em>Harry Potter</em></strong> series</p>
+	<a href="https://www.pottermore.com/">Pottermore</a>
 
 	</body>
 </html>
