--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -18,5 +18,50 @@
 			<td>The Reckoners Series</td>
 		</tr>
 	</table>
+	<br>
+	<table border="1">
+		<tr>
+			<th>Character</th>
+			<th>Powers</th>
+			<th>Weapon</th>
+		</tr>
+		<tr>
+			<td>Harry Potter</td>
+			<td>Wizard</td>
+			<td>Holly Phoenix Feather</td>
+		</tr>
+		<tr>
+			<td>Ron Weasley</td>
+			<td>Wizard</td>
+			<td>Willow Unicorn Hair</td>
+		</tr>
+		<tr>
+			<td>Herminone Granger</td>
+			<td>Witch</td>
+			<td>Vine Dragon Heartstring</td>
+		</tr>
+	</table>
+	<br>
+	<table border=1>
+    <tr>
+      <th>Header 1</th>
+      <th>Header 2</th>
+      <th>Header 3</th>
+    </tr>
+    <tr>
+      <td>Cell 1</td>
+      <td>Cell 2</td>
+      <td>Cell 3</td>
+    </tr>
+    <tr>
+      <td rowspan="2">Some Text</td>
+      <td>&nbsp;</td>
+      <td>C</td>
+    </tr>
+    <tr>
+      <td>Red 1</td>
+      <td>Red 2</td>
+    </tr>
+</table>
 </body>
 </html>
