--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CSS</title>
-  </head>
-  <body>
-
-  </body>
+<head>
+	<title></title>
+</head>
+<body>
+	<table>
+		<tr>
+			<th> </th>
+			<th> </th>
+			<th> </th>
+		</tr>
+		<tr>
+			<td> </td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td> </td>
+			<td> </td>
+			<td> </td>
+		</tr>
+	</table>
+</body>
 </html>
