Added some td and footer and nav tags

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Harry Potter Fan Page</title>
 </head>
 <body>
-	<table>
-		<tr>
-			<th> </th>
-			<th> </th>
-			<th> </th>
-		</tr>
-		<tr>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-	</table>
+	<main>
+		<article>
+			<table border="1">
+				<tr>
+					<th>Characters</th>
+					<th>Blood-Status</th>
+					<th>Wand Type</th>
+				</tr>
+				<tr>
+					<td></td>
+					<td rowspan="2">Pureblood</td>
+					<td> </td>
+				</tr>
+				<tr>
+					<td> </td>
+					<td> </td>
+				</tr>
+			</table>
+		</article>
+	</main>
+	<footer>
+		<nav><a href="index.html">Home</a></nav>
+	</footer>
 </body>
 </html>
