Added more table data

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -4,26 +4,57 @@
 	<title>Harry Potter Fan Page</title>
 </head>
 <body>
+	<header>Harry Potter Fan Page</header>
+
 	<main>
-		<article>
-			<table border="1">
+		<section>
+			<h2>Character Traits</h2>	
+			<article>
+				<table border="1">
+					<tr>
+						<th>Characters</th>
+						<th>Blood-Status</th>
+						<th>Wand Type</th>
+					</tr>
+					<tr>
+						<td>Ron Weasley</td>
+						<td rowspan="2">Pureblood</td>
+						<td>Unicorn Hair</td>
+					</tr>
+					<tr>
+						<td>Ginny Weasley</td>
+						<td>Unknown</td>
+					</tr>
+					<tr>
+						<td>Harry Potter</td>
+						<td>Half-Blood</td>
+						<td>Holly Phoenix Tail Feature</td>
+					</tr>
+				</table>
+			</article>
+		</section>
+		<section>
+			<h2>Character Houses</h2>
+			<table>
 				<tr>
-					<th>Characters</th>
-					<th>Blood-Status</th>
-					<th>Wand Type</th>
+					<th> </th>
+					<th> </th>
+					<th> </th>
 				</tr>
 				<tr>
-					<td></td>
-					<td rowspan="2">Pureblood</td>
+					<td> </td>
+					<td> </td>
 					<td> </td>
 				</tr>
 				<tr>
+					<td> </td>
 					<td> </td>
 					<td> </td>
 				</tr>
 			</table>
-		</article>
+		</section>
 	</main>
+	<aside>Creator of the Harry Potter Series: JK Rowling</aside>
 	<footer>
 		<nav><a href="index.html">Home</a></nav>
 	</footer>
