--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 	<h1>Welcome Octopus</h1>
-
+	<div class="body">
+		<img src="octopus.png">
+	</div>
+	<div class="head">
+		<img src="hat.png">
+	</div>
+	<div class="eyes">
+		<img src="glasses.png">
+	</div>	
 </body>
 </html>
