--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,15 +5,16 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Welcome Octopus</h1>
-	<div class="body">
-		<img src="octopus.png">
+	<div class="Octopus-Outfit">
+		<div id="body">
+			<img src="octopus.png">
+		</div>
+		<div id="glasses">
+			<img src="glasses.png">
+		</div>
+		<div id="hat">
+			<img src="hat.png">
+		</div>
 	</div>
-	<div class="head">
-		<img src="hat.png">
-	</div>
-	<div class="eyes">
-		<img src="glasses.png">
-	</div>	
 </body>
 </html>
